--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-GROQ_API_KEY=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
+GROQ_API_KEY=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
+# GROQ_API_KEY=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
+
